--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.446.0",
     "next": "15.5.4",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "lucide-react": "^0.446.0",
-    "date-fns": "^3.6.0",
-    "clsx": "^2.1.0"
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
+    "@prisma/client": "^6.16.2",
     "@types/node": "^20.16.11",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
     "eslint": "^8.57.1",
-    "eslint-config-next": "15.5.4"
+    "eslint-config-next": "15.5.4",
+    "postcss": "^8.4.49",
+    "prisma": "^6.16.2",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.6.3"
   }
 }
