--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
+    "autoprefixer": "^10.4.20",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.3",
+    "postcss": "^8.4.49",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "@types/node": "^20.16.11",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.49",
     "prisma": "^6.16.2",
-    "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3"
   }
 }
