--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.446.0",
-    "next": "14.2.3",
+    "next": "^14.2.33",
     "postcss": "^8.4.49",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-time-picker": "^8.0.2",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
