fix: Add release command for database migration

--- a/zeabur.yaml
+++ b/zeabur.yaml
@@ -5,6 +5,8 @@ services:
       image:
         build:
           type: dockerfile
+        release:
+          command: npx prisma migrate deploy
     ports:
       - port: 3000
     environment:
