--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,2 @@
-# Production environment variables for Zeabur deployment
-DATABASE_URL="file:./data/booking.db"
-BACKUP_SCHEDULE="0 2 * * *"
-BACKUP_RETENTION_DAYS=30
-NODE_ENV=production
+# This file is intentionally left blank.
+# Production environment variables are managed in zeabur.yaml or the Zeabur dashboard.
